DX-49122: explicitly set timeoutSeconds for readiness probes
Change-Id: I837dc36cf1fabefc6fe455693d2d0a5a5c60f799

--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -101,8 +101,9 @@ spec:
             scheme: HTTPS
             {{- end }}
             port: 9047
-          initialDelaySeconds: 5
+          initialDelaySeconds: 30
           periodSeconds: 5
+          timeoutSeconds: 5
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
       - name: start-only-one-dremio-master
