DX-49122: add startupProbe to coordinator pods
- adding a startupProbe that will poll the web port until Dremio becomes available
- update the readinessProbe configuration

Change-Id: I837dc36cf1fabefc6fe455693d2d0a5a5c60f799

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -80,14 +80,23 @@ spec:
           name: server-fabric
         - containerPort: 45679
           name: server-conduit
+        startupProbe:
+          httpGet:
+            path: /
+            {{- if $.Values.coordinator.web.tls.enabled }}
+            scheme: HTTPS
+            {{- end }}
+            port: web
+          failureThreshold: 10
+          periodSeconds: 5
         readinessProbe:
           httpGet:
             path: /
             {{- if $.Values.coordinator.web.tls.enabled }}
             scheme: HTTPS
             {{- end }}
-            port: 9047
-          initialDelaySeconds: 5
+            port: web
+          failureThreshold: 2
           periodSeconds: 5
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
