DX-61258: use temurin based Zookeeper image
Change-Id: If2fc90f265044ee87779a2a0db1829c6fb09832b

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -255,7 +255,7 @@ executor:
 zookeeper:
   # The Zookeeper image used in the cluster.
   image: zookeeper
-  imageTag: 3.8.0
+  imageTag: 3.8-temurin
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
