--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -43,7 +43,7 @@ spec:
         resources:
           requests:
             cpu: {{ $.Values.coordinator.cpu }}
-            memory: {{ $.Values.coordinator.memory }}M
+            memory: {{ $.Values.coordinator.memory }}Mi
         volumeMounts:
         - name: dremio-master-volume
           mountPath: /opt/dremio/data
@@ -94,14 +94,23 @@ spec:
           name: server-fabric
         - containerPort: 45679
           name: server-conduit
+        startupProbe:
+          httpGet:
+            path: /
+            {{- if $.Values.coordinator.web.tls.enabled }}
+            scheme: HTTPS
+            {{- end }}
+            port: web
+          failureThreshold: 10
+          periodSeconds: 5
         readinessProbe:
           httpGet:
             path: /
             {{- if $.Values.coordinator.web.tls.enabled }}
             scheme: HTTPS
             {{- end }}
-            port: 9047
-          initialDelaySeconds: 5
+            port: web
+          failureThreshold: 2
           periodSeconds: 5
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
