DX-65864: readinessProbe and startupProbe configurable in values.yaml
Change-Id: Ia50a9b8224ada5c2e8d9e0f47a3f419425e14bfc

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -87,8 +87,8 @@ spec:
             scheme: HTTPS
             {{- end }}
             port: 9047
-          failureThreshold: 10
-          periodSeconds: 5
+          failureThreshold: {{ $.Values.coordinator.startupProbe.failureThreshold }}
+          periodSeconds: {{ $.Values.coordinator.startupProbe.periodSeconds }}
         readinessProbe:
           httpGet:
             path: /
@@ -96,8 +96,8 @@ spec:
             scheme: HTTPS
             {{- end }}
             port: 9047
-          failureThreshold: 2
-          periodSeconds: 5
+          failureThreshold: {{ $.Values.coordinator.readinessProbe.failureThreshold }}
+          periodSeconds: {{ $.Values.coordinator.readinessProbe.periodSeconds }}
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
       - name: wait-for-dremio-master
