--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -101,8 +101,8 @@ spec:
             scheme: HTTPS
             {{- end }}
             port: web
-          failureThreshold: 10
-          periodSeconds: 5
+          failureThreshold: {{ $.Values.coordinator.startupProbe.failureThreshold }}
+          periodSeconds: {{ $.Values.coordinator.startupProbe.periodSeconds }}
         readinessProbe:
           httpGet:
             path: /
@@ -110,8 +110,8 @@ spec:
             scheme: HTTPS
             {{- end }}
             port: web
-          failureThreshold: 2
-          periodSeconds: 5
+          failureThreshold: {{ $.Values.coordinator.readinessProbe.failureThreshold }}
+          periodSeconds: {{ $.Values.coordinator.readinessProbe.periodSeconds }}
       initContainers:
       {{- include "dremio.coordinator.extraInitContainers" $ | nindent 6 }}
       - name: start-only-one-dremio-master
