DX-58905: Add Support for Autoscaling Executors
This change set adds the ability for dynamically scaling Executors.
This feature is optional and disabled by default.

- add a HPA to scale Executors
- update dremio-executor template to expose a metrics port,
  add required Prometheus annotations and add required JVM options for
  the service

Change-Id: I24dcc0b3664b42881f1edb4a77cc02c6e5be8679

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -153,6 +153,21 @@ executor:
   engines: ["default"]
   count: 3
 
+  # By default, the number of Engines is static. Enable the Node Lifecycle Service
+  # to enable dynamic scaling.
+  # nodeLifecycleService:
+  #   enabled: true
+  #   scalingMetrics:
+  #     default:
+  #       enabled: true
+  #   scalingBehavior:
+  #     scaleDown:
+  #       defaultPolicy:
+  #         enabled: true
+  #     scaleUp:
+  #       defaultPolicy:
+  #         enabled: true
+
   # Executor volume size.
   volumeSize: 128Gi
 
@@ -238,6 +253,19 @@ executor:
   #     podLabels: {}
   #     nodeSelector: {}
   #     tolerations: []
+  #
+  #     nodeLifecycleService:
+  #       enabled: true
+  #       scalingMetrics:
+  #         default:
+  #           enabled: true
+  #       scalingBehavior:
+  #         scaleDown:
+  #           defaultPolicy:
+  #             enabled: true
+  #         scaleUp:
+  #           defaultPolicy:
+  #             enabled: true
   #
   #     serviceAccount: ""
   #
