--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -211,6 +211,21 @@ executor:
   #nodeSelector: {}
   #tolerations: []
 
+  # By default, the number of Engines is static. Enable the Node Lifecycle Service
+  # to enable dynamic scaling.
+  # nodeLifecycleService:
+  #   enabled: true
+  #   scalingMetrics:
+  #     default:
+  #       enabled: true
+  #   scalingBehavior:
+  #     scaleDown:
+  #       defaultPolicy:
+  #         enabled: true
+  #     scaleUp:
+  #       defaultPolicy:
+  #         enabled: true
+
   # Engine Overrides
   #
   # The settings above are overridable on a per-engine basis. These
@@ -238,6 +253,19 @@ executor:
   #     podLabels: {}
   #     nodeSelector: {}
   #     tolerations: []
+  #
+  #     nodeLifecycleService:
+  #       enabled: true
+  #       scalingMetrics:
+  #         default:
+  #           enabled: true
+  #       scalingBehavior:
+  #         scaleDown:
+  #           defaultPolicy:
+  #             enabled: true
+  #         scaleUp:
+  #           defaultPolicy:
+  #             enabled: true
   #
   #     serviceAccount: ""
   #
