--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -26,9 +26,10 @@ spec:
       annotations:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
         {{- include "dremio.executor.podAnnotations" (list $ $engineName) | nindent 8}}
+        {{- include "dremio.executor.prometheusAnnotations" $ | nindent 8}}
     spec:
       {{- include "dremio.executor.serviceAccount" (list $ $engineName) | nindent 6}}
-      terminationGracePeriodSeconds: 120
+      {{- include "dremio.executor.kubernetes.terminationGracePeriodSeconds" $ | nindent 6}}
       {{- include "dremio.executor.nodeSelector" (list $ $engineName) | nindent 6}}
       {{- include "dremio.executor.tolerations" (list $ $engineName) | nindent 6}}
       containers:
@@ -62,6 +63,7 @@ spec:
         - name: DREMIO_JAVA_SERVER_EXTRA_OPTS
           value: >-
             {{- include "dremio.executor.extraStartParams" (list $ $engineName) | nindent 12 -}}
+            {{- include "dremio.executor.gracefulShutdownParams" $ | nindent 12 }}
             -Dzookeeper=zk-hs:2181
             -Dservices.coordinator.enabled=false
             -Dservices.coordinator.master.enabled=false
@@ -80,6 +82,10 @@ spec:
           name: server-fabric
         - containerPort: 45679
           name: server-conduit
+        {{- if and $.Values.executor.nodeLifecycleService $.Values.executor.nodeLifecycleService.enabled }}
+        - containerPort: {{ include "dremio.executor.metricsPort" $ }}
+          name: prometheus
+        {{- end }}
       initContainers:
       {{- include "dremio.executor.extraInitContainers" (list $ $engineName) | nindent 6 }}
       - name: chown-data-directory
