added web port to dremio-coordinator

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -72,6 +72,8 @@ spec:
         command: ["/opt/dremio/bin/dremio"]
         args: ["start-fg"]
         ports:
+        - containerPort: 9047
+          name: web
         - containerPort: 31010
           name: client
         - containerPort: 32010
