--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -13,9 +13,8 @@
 # will potentially cause Dremio to upgrade versions
 # automatically during redeployments and may negatively impact
 # the cluster.
-
 image: dremio/dremio-oss
-imageTag: 24.0.0
+imageTag: 24.1.0
 
 # Annotations, labels, node selectors, and tolerations
 #
@@ -131,6 +130,22 @@ coordinator:
       # To create a TLS secret, use the following command:
       # kubectl create secret tls ${TLS_SECRET_NAME} --key ${KEY_FILE} --cert ${CERT_FILE}
       secret: dremio-tls-secret-flight
+
+  # Startup Probe
+  startupProbe:
+    # Max timeout for the probe is calculated as failureThreshold * periodSeconds
+    # failureThreshold: Maximum number of allowed failures
+    failureThreshold: 300
+    # periodSeconds: Polling frequency expressed in seconds
+    periodSeconds: 1
+
+  # Readiness Probe
+  readinessProbe:
+    # Max timeout for the probe is calculated as failureThreshold * periodSeconds
+    # failureThreshold: Maximum number of allowed failures
+    failureThreshold: 120
+    # periodSeconds: Polling frequency expressed in seconds
+    periodSeconds: 1
 
 # Dremio Executor
 executor:
@@ -271,7 +286,7 @@ executor:
 zookeeper:
   # The Zookeeper image used in the cluster.
   image: zookeeper
-  imageTag: 3.8.0
+  imageTag: 3.8-temurin
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
