DX-82626: add ddc label to dremio-coordinator, dremio-executor and dremio-master
Change-Id: I799aca5043d6a8f8c1c846bb2a9319b0f86fac93

--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -21,6 +21,7 @@ spec:
       labels:
         app: {{ $executorName }}
         role: dremio-cluster-pod
+        diagnostics-collector-role: dremio-executor
         {{- include "dremio.executor.podLabels" (list $ $engineName) | nindent 8}}
       annotations:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
