DX-82626: add ddc label to dremio-coordinator and dremio-executor
Change-Id: I799aca5043d6a8f8c1c846bb2a9319b0f86fac93

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: dremio-coordinator
         role: dremio-cluster-pod
+        ddc: dremio-coordinator
         {{- include "dremio.coordinator.podLabels" $ | nindent 8 }}
       annotations:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
