--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -21,6 +21,7 @@ spec:
       labels:
         app: {{ $executorName }}
         role: dremio-cluster-pod
+        ddc: dremio-executor
         {{- include "dremio.executor.podLabels" (list $ $engineName) | nindent 8}}
       annotations:
         dremio-configmap/checksum: {{ (tpl ($.Files.Glob "config/*").AsConfig $) | sha256sum }}
