DX-68047: add ability to write logs to file on disk rather than stdout
Change-Id: Id6daac20ec3a8acbcd8b1269fab36d20daace773

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -60,6 +60,7 @@ spec:
         - name: DREMIO_JAVA_SERVER_EXTRA_OPTS
           value: >-
             {{- include "dremio.coordinator.extraStartParams" $ | nindent 12 -}}
+            {{- include "dremio.coordinator.log.path" $ | nindent 12 }}
             -Dzookeeper=zk-hs:2181
             -Dservices.coordinator.enabled=true
             -Dservices.coordinator.master.enabled=false
