--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -76,6 +76,13 @@ coordinator:
   # Uncomment this value to use a different storage class for the coordinator.
   #storageClass:
 
+  # Uncomment this value to use a different storage class for the coordinator logs.
+  #logStorageClass:
+
+  # Uncomment this value to write logs to a file on disk.
+  # Note: Logs can be written to a file OR to stdout (not both).
+  #writeLogToFile: true
+
   # These values, when defined, override the provided shared annotations, labels, node selectors, or tolerations.
   # Uncomment only if you are trying to override the chart's shared values.
   #annotations: {}
@@ -181,6 +188,10 @@ executor:
 
   # Uncomment this value to use a different storage class for executors.
   #storageClass:
+
+  # Uncomment this value to write logs to a file on disk.
+  # Note: Logs can be written to a file OR to stdout (not both).
+  #writeLogToFile: true
 
   # Dremio C3
   # Designed for use with NVMe storage devices, performance may be impacted when using
@@ -483,6 +494,10 @@ extraVolumes: []
 # Extra Volume Mounts
 # Array to add extra volume mounts to all Dremio resources, normally used in conjunction wtih extraVolumes.
 extraVolumeMounts: []
+
+# Uncomment this value to write logs to a file on disk for all Dremio resources.
+# Note: Logs can be written to a file OR to stdout (not both).
+#writeLogToFile: true
 
 # Dremio Service
 # The dremio-client service exposes the service for access outside of the Kubernetes cluster.
