--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -76,6 +76,9 @@ coordinator:
   # Uncomment this value to use a different storage class for the coordinator.
   #storageClass:
 
+  # Uncomment this value to use a different storage class for the coordinator logs.
+  #logStorageClass:
+
   # These values, when defined, override the provided shared annotations, labels, node selectors, or tolerations.
   # Uncomment only if you are trying to override the chart's shared values.
   #annotations: {}
