--- a/charts/dremio_v2/templates/dremio-master.yaml
+++ b/charts/dremio_v2/templates/dremio-master.yaml
@@ -47,6 +47,8 @@ spec:
         volumeMounts:
         - name: dremio-master-volume
           mountPath: /opt/dremio/data
+        - name: dremio-master-log-volume
+          mountPath: /opt/dremio/data/log
         - name: dremio-config
           mountPath: /opt/dremio/conf
         - name: dremio-hive2-config
@@ -76,6 +78,7 @@ spec:
             -Dservices.coordinator.master.embedded-zookeeper.enabled=false
             -Dservices.executor.enabled=false
             -Dservices.conduit.port=45679
+            -Ddremio.log.path=/opt/dremio/data/log
         - name: AWS_CREDENTIAL_PROFILES_FILE
           value: "/opt/dremio/aws/credentials"
         - name: AWS_SHARED_CREDENTIALS_FILE
@@ -132,6 +135,18 @@ spec:
         args:
         - "dremio:dremio"
         - "/opt/dremio/data"
+      - name: chown-log-directory
+        image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+        imagePullPolicy: IfNotPresent
+        securityContext:
+          runAsUser: 0
+        volumeMounts:
+          - name: dremio-master-log-volume
+            mountPath: /opt/dremio/data/log
+        command: ["chown"]
+        args:
+          - "dremio:dremio"
+          - "/opt/dremio/data/log"
       - name: upgrade-task
         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
@@ -228,6 +243,14 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: dremio-master-volume
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      {{- include "dremio.coordinator.storageClass" $ | nindent 6 }}
+      resources:
+        requests:
+          storage: {{ $.Values.coordinator.volumeSize }}
+  - metadata:
+      name: dremio-master-log-volume
     spec:
       accessModes: ["ReadWriteOnce"]
       {{- include "dremio.coordinator.storageClass" $ | nindent 6 }}
