--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -55,6 +55,7 @@ spec:
           mountPath: /opt/dremio/plugins/connectors/hive3-ee.d
         {{- include "dremio.executor.cloudCache.volumeMounts" (list $ $engineName) | nindent 8 }}
         {{- include "dremio.executor.extraVolumeMounts" (list $ $engineName) | nindent 8 }}
+        {{- include "dremio.executor.log.volumeMount" (list $ $engineName) | nindent 8 }}
         env:
         - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
           value: "{{ template "dremio.executor.heapMemory" (list $ $engineName) }}"
@@ -64,6 +65,7 @@ spec:
           value: >-
             {{- include "dremio.executor.extraStartParams" (list $ $engineName) | nindent 12 -}}
             {{- include "dremio.executor.gracefulShutdownParams" (list $ $engineName) | nindent 12 }}
+            {{- include "dremio.executor.log.path" (list $ $engineName) | nindent 12 }}
             -Dzookeeper=zk-hs:2181
             -Dservices.coordinator.enabled=false
             -Dservices.coordinator.master.enabled=false
@@ -85,6 +87,7 @@ spec:
         {{- include "dremio.executor.metricsPort" (list $ $engineName) | nindent 8 }}
       initContainers:
       {{- include "dremio.executor.extraInitContainers" (list $ $engineName) | nindent 6 }}
+      {{- include "dremio.executor.log.volumeMountInitContainer" (list $ $engineName) | nindent 6 }}
       - name: chown-data-directory
         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
@@ -112,6 +115,7 @@ spec:
       {{- include "dremio.executor.extraVolumes" (list $ $engineName) | nindent 6 }}
       {{- include "dremio.imagePullSecrets" $ | nindent 6 }}
   volumeClaimTemplates:
+  {{- include "dremio.executor.log.volumeClaimTemplate" (list $ $engineName) | nindent 2 }}
   - metadata:
       name: {{ template "dremio.executor.volumeClaimName" (list $ $engineName) }}
     spec:
